# LeSofusFelix

./: .gitignore  LICENSE  README.md  data.py  decoder.py  encoder.py  main.py  predicter.py  predictor.py  pyproject.toml  starts.npy  train.py  vit.py
docs/superpowers/specs/: 2026-07-17-dataset-cli-runs-design.md
