[project]
name = "lesofusfelix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.7",
    "h5py>=3.16.0",
    "hdf5plugin>=7.0.0",
    "huggingface-hub>=1.24.0",
    "jax>=0.10.1",
    "matplotlib>=3.11.0",
    "optax>=0.2.8",
    "orbax-checkpoint>=0.12.1",
]
